# hardware-monitoring

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html
frontend/js/: charts.js
localsetup/: build_remote.sh  default.conf  run_frontend.sh
