[package]
name = "hardware-monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lm-sensors = "0.1.5"
procfs = "0.15.1"
ctrlc = { version = "3.4.0", features=["termination"]}
byteorder = "1.4.3"
